2005-12-09 Quentin Mathe <qmathe@club-internet.fr>

   * Source/Index/LCSegmentMergeInfo.m:
   Load docMap and postings only when needed.

2005-12-08 Quentin Mathe <qmathe@club-internet.fr>

    * Source/Search/LCQueryFilter.m:
    Add -hash: and -isEqual:

2005-11-09 Quentin Mathe <qmathe@club-internet.fr>

    Warning! Xcode compilation untested.
    * Source/GNUmakefile.preamble:
    * Source/GNUmakefile.postamble:
    Fixed compilation in order to link OgreKit correctly even when it is not 
    installed (now the whole repository compiles in one pass).

2005-10-21 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Index/LCFieldsReader.m:
    Update to date.

2005-10-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCPrefixQuery.m:
    Add new methods (not ported yet).

2005-10-08 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Analysis/TestAnalyzer.h:
    Fix headers.

2005-10-06 Quentin Mathe <qmathe@club-internet.fr>

    Warning! Xcode compilation untested.
    * Current test result:
    Result: 45 classes, 109 methods, 352233 tests, 8 failed
    * Source/*.m:
    * Source/Analysis/*.m:
    * Source/Document/*.m:
    * Source/Importer/*.m:
    * Source/Index/*.m:
    * Source/Java/*.m:
    * Source/QueryParser/*.m:
    * Source/QueryParser/*.h:
    * Source/Search/*.m:
    * Source/Store/*.m:
    * Source/Util/*.m:
    (Most of their related headers have been modified too)
    * Source/GNUmakefile:
    * Source/GNUmakefile.preamble:
    * Source/GNUmakefile.postamble:
    * Source/GNUmakefile.headers:
    * Source/GNUmakefile.headers_build:
    * Source/*/GNUmakefile:
    Modified to have compilation and deployment relying on a flat headers
    directory. It allows us to replace #include <LuceneKit/Whatever/MyHeader.h>
    by "MyHeader.h" in order to fix Xcode compilation without relying on a
    custom shell script a la GNUmakefile.headers_build.
    NOTE: We couldn't have used in any headers subdirectory a directive